syntax = "proto3";

package user;

service UserController {
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc VerifyTheNumber (VerfiyCodeRequest) returns (VerifyCodeResponse);
    rpc AddPassword (AddPasswordRequest) returns (AddPasswordResponse);
    rpc ForgetPassword (ForgetPassRequest) returns (ForgetPassResponse);
    rpc ChangePassword (ChangePass) returns (ChangePassResponse);
    rpc LogoutUser (LogoutRequest) returns (LoginResponse);
    rpc RefreshTokens (RefreshTokensRequest) returns (RefreshTokensResponse);
}

message CurrentUser {
    int32 userId = 1;
    string msisdn = 2;
    int64 iat = 3;
    int64 exp = 4;
}
message UserDetailsDto {
    string firstName = 1;
    string lastName = 2;
    string middleName = 3;
    string email = 4;
    string password = 5;
    string msisdn = 6;
    string status = 7;
    string language = 8;
}
message UserReturn {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string middleName = 4;
    string email = 5;
    string msisdn = 6;
    string status = 7;
    string language = 8;
    string lastLogin = 9;
    string createdAt = 10;
    string updatedAt = 11;
    string deletedAt = 12;
}
message Tokens {
    string accessToken = 1;
    string refreshToken = 2;
}

message AddUserRequest {
    CurrentUser userId = 1;
    UserDetailsDto user = 2; 
}
message AddUserResponse {
   UserReturn user = 1;
   Tokens tokens = 2;
}

message LoginRequest {
    string msisdn = 1;  
    string ipAddress = 2;
    string reason = 3;
}
message LoginResponse {
    int32 size = 1;
    int32 timeout = 2;
}

message VerfiyCodeRequest {
    string msisdn = 1;
    string code = 2;
}
message VerifyCodeResponse {
    Tokens tokens = 1;
}

message ForgetPassRequest {
    string msisdn = 1;
}
message ForgetPassResponse {

}

message PasswordDto {
    string password = 1;
    string repassword = 2;
}
message ChangePass {
    string msisdn = 1;
    string code = 2;
    PasswordDto passoword = 3;
}
message ChangePassResponse {

}

message AddPasswordRequest {
    CurrentUser user = 1;
    PasswordDto password = 2;
}
message AddPasswordResponse {

}

message LogoutRequest {
    CurrentUser user = 1;
}
message LogoutResponse {
    bool logout = 1;
}

message RefreshTokensRequest {
    CurrentUser user = 1;
    string refreshtoken = 2;
}
message RefreshTokensResponse {
    Tokens tokens = 1;
}